--- a/exam-engine.html
+++ b/exam-engine.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exam Interface - Enhanced</title>
+    <title>Your Local Examination Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
@@ -41,9 +41,20 @@
 
     <div class="max-w-4xl mx-auto p-4 md:p-8">
         <div id="setup-view" class="bg-white rounded-2xl shadow-xl p-8 border border-slate-200 mt-10">
-            <div class="text-center mb-8">
-                <h1 class="text-3xl font-black text-slate-900 uppercase tracking-tight">Exam Practice Engine</h1>
-                <p class="text-slate-500">Enhanced for Topics & Logic</p>
+            <div class="text-center mb-6">
+                <h1 class="text-3xl font-black text-slate-900 uppercase tracking-tight">Your Local Examination Engine</h1>
+                <p class="text-slate-500 font-medium">Try with local or available exams.</p>
+            </div>
+
+            <div class="flex flex-wrap justify-center gap-3 mb-8">
+                <div class="flex items-center gap-2 px-3 py-1 bg-slate-100 rounded-full border border-slate-200">
+                    <span class="text-[10px] font-bold text-slate-400 uppercase">Author</span>
+                    <span class="text-sm font-bold text-slate-700 underline decoration-blue-500/30">Kashyap Makadia</span>
+                </div>
+                <a href="https://github.com/KashyapMak/ms-certification-preparation" target="_blank" class="flex items-center gap-2 px-3 py-1 bg-slate-800 hover:bg-slate-900 rounded-full transition-colors">
+                    <svg class="w-4 h-4 fill-white" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                    <span class="text-sm font-bold text-white">GitHub Repo</span>
+                </a>
             </div>
 
             <div class="flex border-b border-slate-200 mb-6">
@@ -106,16 +117,28 @@
         <div id="result-view" class="hidden space-y-8">
             <div class="bg-white rounded-3xl shadow-2xl p-10 text-center border border-slate-200">
                 <h2 class="text-3xl font-black mb-6 text-slate-900">Exam Results</h2>
+                
                 <div class="inline-block p-8 rounded-full bg-slate-50 border-8 border-white shadow-xl mb-6 text-center">
                     <div id="final-score" class="text-6xl font-black text-blue-600">0</div>
                     <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mt-1">Points</div>
                 </div>
+
                 <div id="status-badge" class="max-w-xs mx-auto py-3 px-6 rounded-2xl text-xl font-black mb-8 border-2 shadow-sm"></div>
-                <div class="flex justify-center gap-4">
-                    <button onclick="location.reload()" class="bg-slate-200 text-slate-700 font-bold px-6 py-2 rounded-xl hover:bg-slate-300">Restart</button>
-                    <a href="#review-section" class="bg-blue-600 text-white font-bold px-6 py-2 rounded-xl hover:bg-blue-700">Review Questions</a>
+
+                <div class="flex justify-center gap-4 mb-10">
+                    <button onclick="location.reload()" class="bg-slate-200 text-slate-700 font-bold px-6 py-2 rounded-xl hover:bg-slate-300 transition-colors">Restart</button>
+                    <a href="#review-section" class="bg-blue-600 text-white font-bold px-6 py-2 rounded-xl hover:bg-blue-700 transition-all">Review Questions</a>
+                </div>
+
+                <div class="pt-6 border-t border-slate-100 flex flex-col items-center gap-2">
+                    <p class="text-xs font-bold text-slate-400 uppercase tracking-tighter">Powered by Kashyap Makadia</p>
+                    <a href="https://github.com/KashyapMak/ms-certification-preparation" target="_blank" class="text-[11px] text-blue-500 hover:text-blue-700 font-medium flex items-center gap-1 transition-colors">
+                        <svg class="w-3 h-3 fill-current" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                        View Project on GitHub
+                    </a>
                 </div>
             </div>
+
             <div id="review-section" class="space-y-6">
                 <h3 class="text-2xl font-black text-slate-800 border-b pb-2">Detailed Review</h3>
                 <div id="review-list" class="space-y-6"></div>
@@ -158,6 +181,7 @@
                     fetch(url).then(r => r.json()).then(data => initExam(data)).catch(() => showError("Failed to fetch exam."));
                 } else {
                     const file = document.getElementById('file-input').files[0];
+                    if(!file) return;
                     const reader = new FileReader();
                     reader.onload = (e) => {
                         try { initExam(JSON.parse(e.target.result)); } 
@@ -190,7 +214,6 @@
                 const correctIds = q.CorrectAnswers || [];
                 const selectedIds = userAnswers[q.id] || [];
 
-                // Topic Handling
                 if (q.topic) {
                     $('#q-topic').show().find('span').text(q.topic);
                 } else {
@@ -232,7 +255,6 @@
                         checkmark = '<div class="w-1.5 h-1.5 bg-white rounded-full"></div>';
                     }
 
-                    // Reason handling for reveal mode
                     const reasonHtml = (isRevealed && opt.reason) ? `<div class="mt-2 text-[11px] italic opacity-80 border-t pt-1 border-slate-200">${opt.reason}</div>` : '';
 
                     optionsList.append(`
